tests/ui/inline-const/expr-with-block-err.stderr
error[E0308]: mismatched types
  --> $DIR/expr-with-block-err.rs:2:13
   |
LL |     const { 2 } - const { 1 };
   |             ^ expected `()`, found integer

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
