tests/ui/inline-const/expr-with-block-err.rs
fn main() {
    const { 2 } - const { 1 };
    //~^ ERROR mismatched types
}
